bug-fix(ui-design): fix UI issues   - make the navbar sticky   - fix the footer visibility when the body has few content [Delivers]

--- a/components/Navbar/navbar.module.scss
+++ b/components/Navbar/navbar.module.scss
@@ -3,11 +3,16 @@
 
 .navbar{
   background: $color-light;
+  position: sticky;
+  top: 0;
+  right: 0;
+  left: 0;
   display: flex;
+  z-index: 1000;
   justify-content: space-between;
   padding: 1rem 3rem;
-
   &__logo {
+    cursor: pointer;
     max-width: 100% !important;
     width: auto !important;
   }
